changes and refresh refactoring : common functions